# VyasoAI

./: .gitignore  Makefile  PROJECT_BIBLE.md  README.md  package-lock.json  package.json  product-overview.txt  pyproject.toml
.github/workflows/: ci.yml
agent-scripts/: README.md  go.mod
app/: README.md  babel.config.cjs  index.html  jest.config.cjs  package.json  tailwind.config.cjs  tsconfig.json
app/.storybook/: main.ts
app/src/: App.tsx  main.js  main.tsx
app/tests/: basic.test.js
connectors/browser-extension/: README.md  manifest.json  package.json  tsconfig.json
connectors/vscode/: README.md  package.json  tsconfig.json
daemon/: Cargo.toml  README.md
daemon/src/: handlers.rs  lib.rs  main.old.rs  main.rs  queue.rs  routes.rs  state.rs
daemon/src/index/: mod.rs
daemon/src/storage/: blobs.rs  crypto.rs  db.rs  hash.rs  mod.rs
daemon/tests/: basic.rs  blobdir.rs  health.rs  integration.rs  mem.rs  purge.rs
docs/architecture/: index.html
docs/chats/: agent1.md  agent2.md  agent3.md  agent4.md  agent5.md
docs/security/: local-rpc-hardening.md
docs/storage/: indexing.md
infra/: CURRENT_INFRASTRUCTURE.md  README.md  docker-compose.yml
infra/api/: openapi.old.yaml  openapi.yaml
intelligence/: README.md  __init__.py  requirements.txt
intelligence/chunking/: __init__.py  chunk_types.py  chunker.py  code.py  markdown_html.py  prose.py
intelligence/cli/: __main__.py  (+1 more)
mock/: mock-daemon.cjs
scripts/: install-dev-tools-macos.sh
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/src/: main.rs
tools/: verify-toolchain.sh
(+82 files in other folders)
