[package]
name = "vyasoai-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "process", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rusqlite = "0.30"
sha2 = "0.10"
zstd = "0.12"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"

[features]
uds = []

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }