[package]
name = "vyasoai-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tauri-build = { version = "1" }